[project]
name = "tunnelvision"
version = "1.0.0"
description = "Automate reverse shell setup using tunnel services (ngrok or bore)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "ngrok",
    "pwntools",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
